--- a/qiyexiaohao/msg.html
+++ b/qiyexiaohao/msg.html
@@ -29,7 +29,7 @@
 			<header class="mui-bar mui-bar-nav">
 				<button @tap="toggleTopP()" class="mui-btn-link mui-icon iconfont icon-dianjihoudesanheng mui-pull-left" style="margin-top: 0;"></button>
 				<h1 class="mui-title">全部信息</h1>
-				<a @tap="toAdd()" class="mui-icon mui-icon-plusempty mui-pull-right"></a>
+				<a class="mui-icon iconfont icon-duanxinxinjianlianxirenjiahao mui-pull-right" @tap="toAdd"></a>
 			</header>
 			<div class="mui-content mui-scroll-wrapper mui-fullscreen">
 				<div class="mui-scroll">
