--- a/qiyexiaohao/sendMsg.html
+++ b/qiyexiaohao/sendMsg.html
@@ -160,6 +160,7 @@
 							console.log(e.index);
 							if(e.index == 1) {
 								//TODO 取消
+								_.back();
 							}
 						}, {
 							"title": "提示",
