--- a/qiyexiaohao/center/setting.html
+++ b/qiyexiaohao/center/setting.html
@@ -86,7 +86,7 @@
 					</ul>
 					<ul class="mui-table-view">
 						<li class="mui-table-view-cell">
-							<a @tap="toTel()" class="mui-navigate-right">
+							<a @tap="openView('kefu.html')" class="mui-navigate-right">
 								联系客服
 							</a>
 						</li>
@@ -149,7 +149,6 @@
 			App({
 				el: '#app',
 				data: {
-					phone: '13654265964'
 				},
 				plusReady: {
 					init: function() {
@@ -167,7 +166,6 @@
 						//退出登录
 					},
 					toTel: function() {
-						plus.device.dial(self.phone, true);
 					}
 				},
 				domReady: function() {
