--- a/qiyexiaohao/center/about.html
+++ b/qiyexiaohao/center/about.html
@@ -26,7 +26,7 @@
 		</header>
 		<div class="mui-content mui-fullscreen mui-scroll-wrapper" id="app">
 			<div class="mui-scroll mui-text-center">
-				<img style="margin: 20px 0 0;" src="../img/logo.png" />
+				<img style="margin: 20px 0 0;width: 100px;" src="../img/logo.png" />
 				<p>企业小号  v{{version}} </p>
 				<p>微信客服：<span><a @tap="toTel()">{{phone}}</a></span></p>
 			</div>
