--- a/qiyexiaohao/center/addAcount.html
+++ b/qiyexiaohao/center/addAcount.html
@@ -25,7 +25,7 @@
 		</header>
 		<div class="mui-content mui-fullscreen mui-scroll-wrapper" id="app">
 			<div class="mui-scroll mui-text-center">
-				<img style="margin: 20px 0 50px;" src="../img/logo.png" />
+				<img style="margin: 20px 0 50px;width: 100px;" src="../img/logo.png" />
 				<div class="mui-row">
 					<div class="mui-col-sm-7 mui-col-xs-7">
 						<div class="color_333" style="margin: 10px">135107921830</div>
