--- a/qiyexiaohao/msg.html
+++ b/qiyexiaohao/msg.html
@@ -10,16 +10,11 @@
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
 		<style>
-			.i_flag {
-				background: #2AC845;
-				color: #fff;
-				font-size: 12px;
-				padding: 5px;
-				margin: 10px 10px 0 0;
-			}
-			
 			.mui-input-group .mui-input-row {
 				line-height: 38px;
+			}
+			.mui-table-view-cell{
+			    padding: 8px 10px;
 			}
 		</style>
 	</head>
@@ -44,12 +39,12 @@
 							<div class="mui-slider-handle">
 								<div class="mui-table">
 									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+										<h4>王大成<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">【升级套餐仅加10元！流量变身不限量！】尊敬的客户</p>
 									</div>
 									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
+										<div class="mui-h5">02-08</div>
+										<div class="mui-badge mui-badge-danger">11</div>
 									</div>
 								</div>
 							</div>
@@ -61,12 +56,12 @@
 							<div class="mui-slider-handle">
 								<div class="mui-table">
 									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+										<h4>李浩<span class="i_flag_2">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">【升级套餐仅加10元！流量变身不限量！】尊敬的客户</p>
 									</div>
 									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
 										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
+										<div class="mui-badge mui-badge-danger">12</div>
 									</div>
 								</div>
 							</div>
@@ -78,12 +73,11 @@
 							<div class="mui-slider-handle">
 								<div class="mui-table">
 									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+										<h4>王琦<span class="i_flag_2">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">【升级套餐仅加10元！流量变身不限量！】尊敬的客户</p>
 									</div>
 									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
+										<div class="mui-h5">06-08</div>
 									</div>
 								</div>
 							</div>
@@ -95,114 +89,12 @@
 							<div class="mui-slider-handle">
 								<div class="mui-table">
 									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
+										<h4>大可<span class="i_flag">主号</span></h4>
+										<p class="mui-h6 mui-ellipsis">【升级套餐仅加10元！流量变身不限量！】尊敬的客户</p>
 									</div>
 									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
 										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-slider-right mui-disabled">
-								<a class="mui-btn mui-btn-red">删除</a>
-							</div>
-							<div class="mui-slider-handle">
-								<div class="mui-table">
-									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
-									</div>
-									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-slider-right mui-disabled">
-								<a class="mui-btn mui-btn-red">删除</a>
-							</div>
-							<div class="mui-slider-handle">
-								<div class="mui-table">
-									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
-									</div>
-									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-slider-right mui-disabled">
-								<a class="mui-btn mui-btn-red">删除</a>
-							</div>
-							<div class="mui-slider-handle">
-								<div class="mui-table">
-									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
-									</div>
-									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-slider-right mui-disabled">
-								<a class="mui-btn mui-btn-red">删除</a>
-							</div>
-							<div class="mui-slider-handle">
-								<div class="mui-table">
-									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
-									</div>
-									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-slider-right mui-disabled">
-								<a class="mui-btn mui-btn-red">删除</a>
-							</div>
-							<div class="mui-slider-handle">
-								<div class="mui-table">
-									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
-									</div>
-									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="mui-table-view-cell">
-							<div class="mui-slider-right mui-disabled">
-								<a class="mui-btn mui-btn-red">删除</a>
-							</div>
-							<div class="mui-slider-handle">
-								<div class="mui-table">
-									<div class="mui-table-cell mui-col-xs-9">
-										<h4 class="mui-ellipsis">王琦<span class="i_flag">主号</span></h4>
-										<p class="mui-h6 mui-ellipsis">晒偶发还沙发煎熬束带结发欧帕斯晒偶发还沙发煎熬束带结发欧帕斯</p>
-									</div>
-									<div class="mui-table-cell mui-col-xs-3 mui-text-right">
-										<div class="mui-h5">下午14:25</div>
-										<div class="mui-badge mui-badge-danger">15</div>
+										<div class="mui-badge mui-badge-danger">1</div>
 									</div>
 								</div>
 							</div>
@@ -267,6 +159,7 @@
 					},
 					toggleTopP: function() {
 						self.popupVisible = !self.popupVisible;
+						console.log("popupVisible===" + self.popupVisible);
 						self.toggleTabbar();
 					},
 					toggleTabbar:function(){
