--- a/qiyexiaohao/center/setting.html
+++ b/qiyexiaohao/center/setting.html
@@ -117,23 +117,23 @@
 		<div id="shareList" class="mui-popover mui-popover-action mui-popover-bottom">
 			<div class="popover-content">
 				<dl class="btnweixin">
-					<dt><img src="img/wechat.png"></dt>
+					<dt><img src="../img/wechat.png"></dt>
 					<dd class="font-size-12">微信</dd>
 				</dl>
 				<dl class="btnpengyouquan">
-					<dt><img src="img/circle.png"></dt>
+					<dt><img src="../img/circle.png"></dt>
 					<dd class="font-size-12">朋友圈</dd>
 				</dl>
 				<dl class="btnpengyouquan">
-					<dt><img src="img/circle.png"></dt>
+					<dt><img src="../img/circle.png"></dt>
 					<dd class="font-size-12">微博</dd>
 				</dl>
 				<dl class="btnpengyouquan">
-					<dt><img src="img/circle.png"></dt>
+					<dt><img src="../img/circle.png"></dt>
 					<dd class="font-size-12">QQ</dd>
 				</dl>
 				<dl class="btnpengyouquan">
-					<dt><img src="img/circle.png"></dt>
+					<dt><img src="../img/circle.png"></dt>
 					<dd class="font-size-12">其他</dd>
 				</dl>
 			</div>
