--- a/qiyexiaohao/contactDetail.html
+++ b/qiyexiaohao/contactDetail.html
@@ -44,9 +44,6 @@
 			.mui-grid-view.mui-grid-9 .mui-table-view-cell>a:not(.mui-btn) {
 				padding: 0;
 			}
-			.mint-navbar .mui-icon{
-				    font-size: 25px;
-			}
 			.mint-navbar a{
 				color: #333;
 			}
@@ -73,8 +70,8 @@
 					</li>
 				</ul>
 				<mt-navbar v-model="selected">
-					<mt-tab-item id="1"><span class="mui-icon mui-icon-person"></span><br>详情</mt-tab-item>
-					<mt-tab-item id="2"><span class="mui-icon mui-icon-phone"></span><br>通话记录</mt-tab-item>
+					<mt-tab-item id="1"><span class="mui-icon iconfont icon-lianxiren"></span><br>详情</mt-tab-item>
+					<mt-tab-item id="2"><span class="mui-icon iconfont icon-tonghuajilu"></span><br>通话记录</mt-tab-item>
 				</mt-navbar>
 				<mt-tab-container v-model="selected">
 					<mt-tab-container-item id="1">
