--- a/qiyexiaohao/my.html
+++ b/qiyexiaohao/my.html
@@ -64,7 +64,7 @@
 			<div class="mui-content mui-fullscreen mui-scroll-wrapper">
 				<div class="mui-scroll">
 					<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell" @tap="openView('login.html')">
 							<div>15863498562</div>
 							<div><span class="i_flag">主机</span></div>
 							<span class="mui-badge mui-badge-inverted">退出登录</span>
