--- a/qiyexiaohao/contact_mint.html
+++ b/qiyexiaohao/contact_mint.html
@@ -11,6 +11,12 @@
 		<link rel="stylesheet" href="js/component/indexList-style.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
 		<style>
+			.mui-bar .mui-icon{
+				font-size: 12px;
+			}
+			.mui-bar-nav.mui-bar .mui-icon{
+				margin-top: 0;
+			}
 		</style>
 	</head>
 
@@ -18,7 +24,7 @@
 		<div id="app">
 			<header class="mui-bar mui-bar-nav">
 				<h1 class="mui-title">联系人</h1>
-				<a class="mui-icon iconfont icon-duanxinxinjianlianxirenjiahao mui-pull-right" @tap="toAddContact"></a>
+				<button class="mui-btn-link mui-icon iconfont icon-duanxinxinjianlianxirenjiahao mui-pull-right" @tap="toAddContact"></button>
 			</header>
 			<div class="mui-content">
 				<form class="mui-input-group" @submit.prevent="search">
