--- a/qiyexiaohao/contacterDeHtml.html
+++ b/qiyexiaohao/contacterDeHtml.html
@@ -71,7 +71,7 @@
 					</li>
 					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
 						<a href="#">
-							<span class="mui-icon iconfont icon-lianxiren1 "></span>
+							<span class="mui-icon iconfont icon-lianxiren"></span>
 							<div class="mui-media-body">添加到联系人</div>
 						</a>
 					</li>
