--- a/qiyexiaohao/my.html
+++ b/qiyexiaohao/my.html
@@ -71,14 +71,12 @@
 						</li>
 					</ul>
 					<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell"  @tap="openView('center/settingAccout.html')">
 							<div>15863498562</div>
 							<div><span class="i_flag">主机</span></div>
 							<span class="mui-badge mui-badge-primary">设置</span>
 						</li>
-					</ul>
-					<ul class="mui-table-view">
-						<li class="mui-table-view-cell">
+						<li class="mui-table-view-cell"  @tap="openView('center/settingAccout.html')">
 							<div>15863498562</div>
 							<div><span class="i_flag">主机</span></div>
 							<span class="mui-badge mui-badge-primary">设置</span>
