更新字体大小
更新字体大小

--- a/qiyexiaohao/center/kefu.html
+++ b/qiyexiaohao/center/kefu.html
@@ -11,7 +11,7 @@
 		<style>
 			.login-logo {
 				margin: 18% auto;
-				width: 90px;
+				width: 6.42rem;
 			}
 			
 			.mui-content {
@@ -23,8 +23,8 @@
 			}
 			
 			.login-logo-bg img {
-				height: 70px;
-				width: 68px
+				height: 5rem;
+				width: 4.85rem
 			}
 			
 			.mui-input-group .mui-input-row:after,
@@ -41,11 +41,11 @@
 			}
 			
 			#login-form {
-				padding: 20px;
+				padding: 1.42rem;
 			}
 			
 			.mui-input-group .mui-input-row {
-				line-height: 40px;
+				line-height: 2.85rem;
 			}
 		</style>
 	</head>
