--- a/qiyexiaohao/center/setting.html
+++ b/qiyexiaohao/center/setting.html
@@ -11,21 +11,21 @@
 		<link rel="stylesheet" href="../css/iconfont.css" />
 		<style>
 			.mg5 {
-				margin: 0 0 15px 0;
+				margin: 0 0 1.07rem 0;
 			}
 			
 			.i_flag {
 				background: #00acf8;
 				color: #fff;
-				font-size: 8px;
-				padding: 2px;
+				font-size: 0.57rem;
+				padding: 0.14rem;
 				margin: 0 0 0 10px;
 			}
 			
 			.popover-title {
 				width: 100%;
-				height: 30px;
-				line-height: 30px;
+				height: 2.14rem;
+				line-height: 2.14rem;
 				background-color: #33A2D7;
 				text-align: center;
 				color: #fff
@@ -45,21 +45,21 @@
 			}
 			
 			.popover-content dl dt img {
-				width: 50px;
-				height: 50px
+				width: 3.57rem;
+				height: 3.57rem
 			}
 			
 			.popover-content dl dd {
 				margin: 0;
 				padding: 0;
-				font-size: 14px;
+				font-size: 1rem;
 				color: #333
 			}
 			
 			.popover-cancel {
 				width: 100%;
-				height: 30px;
-				line-height: 30px;
+				height: 2.14rem;
+				line-height: 2.14rem;
 				text-align: center;
 				background-color: #FFFFFF;
 				color: #333333
