--- a/qiyexiaohao/index.html
+++ b/qiyexiaohao/index.html
@@ -33,37 +33,45 @@
 		</nav>
 		<script src="js/mui.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			 //mui初始化
+			//mui初始化
 			mui.init({
-				preloadPages:[{
-					"url":"contactDetail.html",
-					"id":"contactDetail"
+				preloadPages: [{
+					"url": "contactDetail.html",
+					"id": "contactDetail"
 				}]
 			});
+			//获取屏幕宽度
+			var width = document.documentElement.clientWidth;
+			var bottom = 0;
+			console.log("width=" + width);
+			
+			
+			
+
 			var subpages = ['main.html', 'msg.html', 'contact_mint.html', 'my.html'];
 			var subpage_style = {
 				top: '0',
-				bottom: '51px'
+				bottom: '60px'
 			};
-			
+
 			var aniShow = {};
 			var mainWeb = null;
-			 //创建子页面，首个选项卡页面显示，其它均隐藏；
+			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
-				console.log("self.id===" + self.id);
 				//首页关闭ios右划
 				self.setStyle({
-					popGesture:"none"
+					popGesture: "none"
 				});
-				for (var i = 0; i < 4; i++) {
+
+				for(var i = 0; i < 4; i++) {
 					var temp = {};
 					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
-					if (i > 0) {
+					if(i > 0) {
 						sub.hide();
-					}else{
+					} else {
 						temp[subpages[i]] = "true";
-						mui.extend(aniShow,temp);
+						mui.extend(aniShow, temp);
 					}
 					self.append(sub);
 				}
@@ -72,44 +80,44 @@
 					plus.navigator.closeSplashscreen(); //手动关闭启动页
 				}, 3000);
 			});
-			 //当前激活选项
+			//当前激活选项
 			var activeTab = subpages[0];
-			 //选项卡点击事件
+			//选项卡点击事件
 			mui('.mui-bar-tab').on('tap', 'a', function(e) {
 				var targetTab = this.getAttribute('href');
-				if('main.html' == targetTab){
+				if('main.html' == targetTab) {
 					mainWeb.evalJS('toggleShow()');
-				}else{
+				} else {
 					mainWeb.evalJS('toggleHidden()');
 				}
-				if (targetTab == activeTab) {
+				if(targetTab == activeTab) {
 					return;
 				}
 				//显示目标选项卡
 				//若为iOS平台或非首次显示，则直接显示
-				if(mui.os.ios||aniShow[targetTab]){
+				if(mui.os.ios || aniShow[targetTab]) {
 					plus.webview.show(targetTab);
-				}else{
+				} else {
 					//否则，使用fade-in动画，且保存变量
 					var temp = {};
 					temp[targetTab] = "true";
-					mui.extend(aniShow,temp);
-					plus.webview.show(targetTab,"fade-in",300);
+					mui.extend(aniShow, temp);
+					plus.webview.show(targetTab, "fade-in", 300);
 				}
 				//隐藏当前;
 				plus.webview.hide(activeTab);
 				//更改当前活跃的选项卡
 				activeTab = targetTab;
 			});
-			
-			 //自定义事件，模拟点击“首页选项卡”
-			document.addEventListener('goIndex', function() { 
+
+			//自定义事件，模拟点击“首页选项卡”
+			document.addEventListener('goIndex', function() {
 				var defaultTab = document.getElementById("main");
 				//模拟首页点击
 				mui.trigger(defaultTab, 'tap');
 				//切换选项卡高亮
 				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
-				if (defaultTab !== current) {
+				if(defaultTab !== current) {
 					current.classList.remove('mui-active');
 					defaultTab.classList.add('mui-active');
 				}
