--- a/qiyexiaohao/contacterDeHtml.html
+++ b/qiyexiaohao/contacterDeHtml.html
@@ -9,39 +9,66 @@
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
 		<style>
+			.mui-bar-nav.mui-bar .mui-icon{
+				margin-top: 1rem;
+			}
 			.bottom_del_div {
 				position: fixed;
 				bottom: 0;
 				z-index: 9;
+				font-size: 1rem;
+				line-height: 100%;
+				padding: 0;
+				height: 1.88rem;
 			}
-			
-			.mui-table-view {
-				margin-bottom: 10px;
-			}
-			
-			.i_flag {
-				background: #00acf8;
-				color: #fff;
-				font-size: 8px;
-				padding: 2px;
-				margin: 0 0 0 10px;
-			}
-			
-			.mui-table-view .mui-media-object {
-				position: relative;
-				top: 27px;
-			}
-			
 			.mui-grid-view.mui-grid-9 {
 				background-color: #fff;
 			}
 			
 			.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
-				font-size: 15px
+				font-size: 0.75rem
 			}
 			
 			.mui-grid-view.mui-grid-9 .mui-table-view-cell>a:not(.mui-btn) {
 				padding: 0;
+			}
+			
+			.detail_body {
+				background: #fff;
+				margin-bottom: 0.31rem;
+			}
+			
+			.detail_body_h {
+				padding: 14px 0 0;
+				line-height: initial;
+				margin: 0 50px 0 10px;
+			}
+			
+			.detail_body_b {
+				padding: 0 10px 5px;
+				line-height: initial;
+				margin: 0 50px 0 0;
+			}
+			
+			.span_right {
+				padding: 15px 15px;
+			}
+			
+			.ul_mr5 {
+				margin-top: 5px;
+			}
+			
+			.iconfont,
+			.mui-icon {
+				font-size: 1.12rem
+			}
+			
+			#listData div {
+				line-height: initial;
+			}
+			
+			#listData .mui-table-view-cell {
+				padding: 0.62rem 0.62rem 0.43rem 0.62rem;
 			}
 		</style>
 	</head>
@@ -53,56 +80,51 @@
 		</header>
 		<div id="app" class="mui-content mui-scroll-wrapper mui-fullscreen">
 			<div class="mui-scroll">
-				<ul class="mui-table-view">
-					<li class="mui-table-view-cell mui-media">
-						<div class="mui-media-body">
-							<span class="color_333">13510792830</span>
-							<span class="i_flag">副1</span><span class="mui-icon iconfont icon-dingdan-duanxin  mui-pull-right span_right"></span>
-							<p>广东广州 </p>
-						</div>
-					</li>
-				</ul>
+				<div class="detail_body">
+					<div class="mui-pull-right span_right" @tap=""><span class="mui-icon iconfont icon-dingdan-duanxin"></span></div>
+					<div class="detail_body_h" @tap="toTel()">
+						<span class="color_333 font_16">13510792830</span>
+						<span class="i_flag">副1</span>
+					</div>
+					<div class="detail_body_b font-size-12" @tap="toTel()">广东广州 </div>
+				</div>
 				<ul class="mui-table-view mui-grid-view mui-grid-9">
 					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
-						<a href="#">
-							<span class="mui-icon mui-icon-plusempty"></span>
-							<div class="mui-media-body">新建</div>
-						</a>
+						<span class="mui-icon mui-icon-plusempty"></span>
+						<div class="mui-media-body">新建</div>
 					</li>
 					<li class="mui-table-view-cell mui-media mui-col-xs-6 mui-col-sm-6">
-						<a href="#">
-							<span class="mui-icon iconfont icon-lianxiren"></span>
-							<div class="mui-media-body">添加到联系人</div>
-						</a>
+						<span class="mui-icon iconfont icon-lianxiren"></span>
+						<div class="mui-media-body">添加到联系人</div>
 					</li>
 				</ul>
 				<ul id="listData" class="mui-table-view">
 					<li @tap="toTel()" class="mui-table-view-cell mui-media">
 						<div class="mui-media-body">
-							<span class="color_333">13510792830</span>
-							<span class="i_flag">副1</span> <span class="mui-pull-right font_15">12:56</span>
-							<p><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</p>
+							<span class="color_333 font_16">13510792830</span>
+							<span class="i_flag">副1</span> <span class="mui-pull-right font-size-12">12:56</span>
+							<div class="font-size-12"><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</div>
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-media">
 						<div class="mui-media-body">
-							<span class="color_333">13510792830</span>
-							<span class="i_flag">副1</span> <span class="mui-pull-right font_15">12:56</span>
-							<p><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</p>
+							<span class="color_333 font_16">13510792830</span>
+							<span class="i_flag">副1</span> <span class="mui-pull-right font-size-12">12:56</span>
+							<div class="font-size-12"><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</div>
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-media">
 						<div class="mui-media-body">
-							<span class="color_333">13510792830</span>
-							<span class="i_flag">副1</span> <span class="mui-pull-right font_15">12:56</span>
-							<p><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</p>
+							<span class="color_333 font_16">13510792830</span>
+							<span class="i_flag">副1</span> <span class="mui-pull-right font-size-12">12:56</span>
+							<div class="font-size-12"><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</div>
 						</div>
 					</li>
 					<li class="mui-table-view-cell mui-media">
 						<div class="mui-media-body">
-							<span class="color_333">13510792830</span>
-							<span class="i_flag">副1</span> <span class="mui-pull-right font_15">12:56</span>
-							<p><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</p>
+							<span class="color_333 font_16">13510792830</span>
+							<span class="i_flag">副1</span> <span class="mui-pull-right font-size-12">12:56</span>
+							<div class="font-size-12"><span class="mui-icon iconfont icon-huchujiantou"></span>广东广州 4月9日 呼入12分21秒</div>
 						</div>
 					</li>
 				</ul>
@@ -158,6 +180,9 @@
 					},
 					toTel: function() {
 						plus.device.dial("13510792830", false);
+					},
+					toSendMsg: function() {
+						w.openView("sendMsg.html")
 					}
 				},
 				domReady: function() {
